--- a/html/PROJ.html
+++ b/html/PROJ.html
@@ -18,7 +18,7 @@
 <ul> <!-- tag que usamos para lista e listamos e modificamos a interface dos butões-->
     
    
-   <li><a href="jogar"class="JOGAR"> JOGAR </a></li> <!--usamos a tag a para linka o jogar e para quando apertamos ir para outra pagina-->
+   <li><a href="escolha"class="JOGAR"> JOGAR </a></li> <!--usamos a tag a para linka o jogar e para quando apertamos ir para outra pagina-->
    <li><a href="ajuda"class="AJUDA"> AJUDA </a></li><!-- usamos a tag a para linka a ajuda e quando apertamos ir para paginda de ajuda-->
    <li><a href="sobre"class="SOBRE"> SOBRE </a></li><!--usamos a tag a para linka o sobre e quando apertamos ir para pagina sobre-->
    <li><a href="https://www.google.com"class="sair"> SAIR  </a></li>
